[UI] Merging Look & Feel to Widget Page

--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -344,6 +344,11 @@ strong {
   text-decoration: none;
   color: #781e75;
 }
+
+.options-wrap {
+  padding: 10px !important;
+}
+
 .createButton .sub-config .options-wrap {
   display: none;
   padding: 10px 10px 0;
@@ -715,16 +720,16 @@ strong {
 }
 /* Responsive Style */
 /* =================================================================================
-smaller than 1280 
+smaller than 1280
 ================================================================================= */
 /* =================================================================================
-smaller than 1024 
+smaller than 1024
 ================================================================================= */
 /* =================================================================================
-smaller than 760 
+smaller than 760
 ================================================================================= */
 /* =================================================================================
-smaller than 620 
+smaller than 620
 ================================================================================= */
 @media screen and (max-width: 620px) {
   .navbar.navbar span.subBrand {
@@ -742,7 +747,7 @@ smaller than 620
   }
 }
 /* =================================================================================
-smaller than 428 
+smaller than 428
 ================================================================================= */
 @media screen and (max-width: 428px) {
   .registerPage .formWrap {
