--- a/views/login.jade
+++ b/views/login.jade
@@ -4,7 +4,7 @@ block content
   script.
     var loginApp =
       angular.module('voxboneApp', [])
-      .controller('loginController', ['$scope', '$http', '$window', function($scope, $http, $window){
+      .controller('LoginController', ['$scope', '$http', '$window', function($scope, $http, $window){
         $scope.master = {};
 
         $scope.update = function(login){
@@ -55,7 +55,7 @@ block content
 
         #form_container
           .formWrap
-            form#login_form(name="login_form", novalidate, ng-controller="loginController")
+            form#login_form(name="login_form", novalidate, ng-controller="LoginController")
               .form-group
                 label.control-label Email
                 input.form-control(type="email" id="uemail" name="uemail" ng-model="login.uemail", required, value= "#{email}")
