--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -269,6 +269,18 @@ strong {
 .registerPage .formWrap p {
   padding-top: 5px;
 }
+.createButton .panel-heading a:after {
+  font-family: 'Glyphicons Halflings';
+  content: "\e114";
+  float: right;
+  color: grey;
+}
+.createButton .panel-heading a.collapsed:after {
+  content: "\e080";
+}
+.createButton .options-wrap {
+  padding: 10px !important;
+}
 .createButton .header p {
   font-size: 13px;
 }
@@ -344,11 +356,6 @@ strong {
   text-decoration: none;
   color: #781e75;
 }
-
-.options-wrap {
-  padding: 10px !important;
-}
-
 .createButton .sub-config .options-wrap {
   display: none;
   padding: 10px 10px 0;
@@ -520,7 +527,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619e;
+  text-shadow: 0px -1px #07619E;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -568,7 +575,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619e;
+  text-shadow: 0px -1px #07619E;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -646,7 +653,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619e;
+  text-shadow: 0px -1px #07619E;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -703,7 +710,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619e;
+  text-shadow: 0px -1px #07619E;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -720,16 +727,16 @@ strong {
 }
 /* Responsive Style */
 /* =================================================================================
-smaller than 1280
+smaller than 1280 
 ================================================================================= */
 /* =================================================================================
-smaller than 1024
+smaller than 1024 
 ================================================================================= */
 /* =================================================================================
-smaller than 760
+smaller than 760 
 ================================================================================= */
 /* =================================================================================
-smaller than 620
+smaller than 620 
 ================================================================================= */
 @media screen and (max-width: 620px) {
   .navbar.navbar span.subBrand {
@@ -747,7 +754,7 @@ smaller than 620
   }
 }
 /* =================================================================================
-smaller than 428
+smaller than 428 
 ================================================================================= */
 @media screen and (max-width: 428px) {
   .registerPage .formWrap {
