--- a/views/widget.jade
+++ b/views/widget.jade
@@ -76,7 +76,7 @@ block content
                     input.form-control(type="text", name="user", ng-model="sipUri" value="SIP: echotest@voxout.voxbone.com" placeholder="i.e. SIP: echotest@voxout.voxbone.com")
                   .panel.panel-default
                     .panel-heading
-                      a.title-toggle(data-toggle="collapse",data-target="#collapseAdvancedCallConfiguration",href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
+                      a.collapsed.title-toggle(data-toggle="collapse",data-target="#collapseAdvancedCallConfiguration",href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
                     .panel-collapse.collapse#collapseAdvancedCallConfiguration
                       .options-wrap.active
                         .form-group
@@ -93,7 +93,7 @@ block content
                           input.form-control(type="text", name="digits", ng-model="digits")
                   .panel.panel-default
                     .panel-heading
-                      a.title-toggle(data-toggle="collapse",data-target="#collapseIncompatileBrowserConfiguration",href="#collapseIncompatileBrowserConfiguration") Incompatible Browser Configuration
+                      a.collapsed.title-toggle(data-toggle="collapse",data-target="#collapseIncompatileBrowserConfiguration",href="#collapseIncompatileBrowserConfiguration") Incompatible Browser Configuration
                     .panel-collapse.collapse#collapseIncompatileBrowserConfiguration
                       .options-wrap.active
                         .form-group
@@ -116,7 +116,7 @@ block content
                 .prev-view.light
                   .widget-box.style-b
                     button.btn-style.mdi-communication-call#launch_call #[span {{buttonText || 'Call Sales'}}]
-                    //- button.btn.btn-raised.btn-material-red.mdi-communication-call-end#hangup_call
+                    //- button.btn.btn-raised.btn-material-red.mdi-communication-call-end#hangup_call #[span 'End Call']
                     .widget-footer
                       a(href="#") powered by:
                   .togle-bg
