--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html(lang='en', ng-app="voxboneApp")
 
     script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js",type="application/javascript")
     script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js",type="application/javascript")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js",type="application/javascript")
 
     script(src="//webrtc.voxbone.com/js/jssip-0.7.9-vox.js",type="application/javascript")
     script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js",type="application/javascript")
