--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html(lang='en', ng-app="voxboneApp")
     title= title
 
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet")
-    link(href="stylesheets/root.css", rel="stylesheet")
+    link(href="/stylesheets/root.css", rel="stylesheet")
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js",type="application/javascript")
     script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js' )
@@ -32,5 +32,5 @@ html(lang='en', ng-app="voxboneApp")
             a.login.withripple(href="/logout") Logout
           else
             a.login.withripple(href="/login") Login
-  
+
     block content
