--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,11 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+
+  .main.registerPage
+    .row
+      .col-xs-12
+        #tokenError.alert.alert-danger
+          h1= message
+          h2= error.status
+        pre #{error.stack}
